# ebible

./: pyproject.toml
ebible/: ebible.py
