[project]
name = "ebible"
version = "0.1.0"
description = ""
authors = [{ name = "Partnership for Applied Biblical NLP (PAB-NLP)" }]
requires-python = ">=3.9,<3.13"
readme = "README.md"
dependencies = [
    "tqdm>=4.64.1,<5",
    "pandas>=1.5.2,<2",
    "requests>=2.28.1,<3",
    "lxml>=4.9.1,<5",
    "daiquiri>=3.2.1,<4",
    "beautifulsoup4>=4.11.1,<5",
    "regex>=2022.10.31,<2023",
    "isort>=5.11.4,<6",
    "PyYAML~=6.0",
    "sil-machine==1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
